# fe

./: .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  ATTRIBUTION  README.md  TODO.md  build.zig  build.zig.zon  cspell.json  env-default  env-diff  env-pnpm  flake.nix  get_wasmtime.fish  how2solid.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pull_libs.sh  todo.txt  turbo.json  watch_dynlib.sh
.zed/: settings.json
app/: eslint.config.mjs  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app/plugins/: generate_asset_types.ts
app/src/: App.tsx  Lozenge.tsx  SignalObject.ts  StatusBar.tsx  Theme.ts  ThemeProvider.tsx  Titlebar.tsx  Workspace.tsx  clamp.mts  dnd_tut.tsx  flatten.ts  index.css  notifications.tsx  panels.tsx  panels2.tsx  tailwind.config.ts  theme.ts  type_helpers.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/ui/: dev-app-update.yml  electron-builder.yml  eslint.config.mjs  pnpm-lock.yaml
libs/: pull_libs.sh
libs/cimgui/: cimgui.h
libs/datetime-zig/: build.zig.zon
libs/wgpu-native-zig/: build.zig
libs/zig-tracy/: build.zig
native/: .gitignore  .prettierignore  Cargo.toml  index.d.ts  index.js  package.json
native/src/: lib.rs
pkg/: LICENSE  README.md
pkg/apple-sdk/: LICENCE
pkg/glfw/: LICENSE  (+2 more)
src/: CuSdlRenderer.zig  TermColor.zig  alloca.zig  fontconfig.zig  main.zig
theme/: package.json
ui/: .gitignore  .prettierrc.yaml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.mjs
(+391 files in other folders)
