
[package]
authors = ["Ketan Reynolds <ketan.cs.reynolds@gmail.com>"]
edition = "2021"
name = "native"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
num_cpus = "1.17.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
